Refactor HTML structure for category and difficulty selection, enhance accessibility with ARIA roles, and improve Firebase initialization error handling

--- a/difficulty-selection.html
+++ b/difficulty-selection.html
@@ -29,8 +29,8 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧢</text></svg>">
 
     <!-- ✅ SECURITY: External CSS ONLY (no inline styles) -->
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="stylesheet" href="/assets/css/difficulty-selection.css">
+    <link rel="stylesheet" href="/assets/css/styles.css?v=2.0">
+    <link rel="stylesheet" href="/assets/css/difficulty-selection.css?v=2.0">
 
     <!-- ✅ SECURITY: DOMPurify lokal gehostet -->
     <script src="/assets/lib/purify.min.js"></script>
