--- a/index.html
+++ b/index.html
@@ -412,11 +412,12 @@
     <footer class="site-footer" role="contentinfo">
         <div class="footer-content">
             <div class="footer-links">
-                <a href="privacy.html" class="footer-link"><span aria-hidden="true">🔒</span> Datenschutz</a>
-                <a href="imprint.html" class="footer-link"><span aria-hidden="true">📋</span> Impressum</a>
+                <a href="/privacy.html" class="footer-link" tabindex="0"><span aria-hidden="true">🔒</span> Datenschutz</a>
+                <a href="/imprint.html" class="footer-link" tabindex="0"><span aria-hidden="true">📋</span> Impressum</a>
+                <a href="/privacy-new-sections.html#jugendschutz" class="footer-link" tabindex="0"><span aria-hidden="true">🔞</span> Jugendschutz</a>
             </div>
             <div class="footer-info">
-                <p>&copy; 2024 No-Cap - Das ultimative Schätzspiel</p>
+                <p>&copy; 2026 Nick-Mark Jacklin | No-Cap - Das ultimative Schätzspiel</p>
                 <p class="website-badge"><span aria-hidden="true">🧢</span> <strong>No-Cap</strong></p>
             </div>
         </div>
