--- a/privacy.html
+++ b/privacy.html
@@ -41,29 +41,36 @@
 </noscript>
 
 <div class="legal-container">
-    <a href="index.html" class="legal-back-button" aria-label="Zurück zur Startseite">
+    <a href="/" class="legal-back-button" aria-label="Zurück zur Startseite" tabindex="0">
         ← Zurück zur Startseite
     </a>
 
     <header class="legal-header">
         <h1>🔒 Datenschutzerklärung</h1>
-        <p class="last-updated">Letzte Aktualisierung: 8. Januar 2026 | Version 2.1</p>
+        <p class="last-updated">Letzte Aktualisierung: 11. Januar 2026 | Version 2.2</p>
+
+        <nav class="quick-links" aria-label="Schnellzugriff">
+            <a href="/imprint.html" tabindex="0">📋 Impressum</a> |
+            <a href="/privacy-new-sections.html#jugendschutz" tabindex="0">🔞 Jugendschutz</a> |
+            <a href="mailto:Nickjacklin99@web.de" tabindex="0">📧 Kontakt</a>
+        </nav>
     </header>
 
     <!-- Table of Contents -->
     <nav class="toc" aria-label="Inhaltsverzeichnis">
         <h3>📋 Inhaltsverzeichnis</h3>
         <ul>
-            <li><a href="#verantwortlicher">1. Verantwortlicher</a></li>
-            <li><a href="#datenverarbeitung">2. Art und Umfang der Datenverarbeitung</a></li>
-            <li><a href="#zwecke">3. Zwecke der Datenverarbeitung</a></li>
-            <li><a href="#rechtsgrundlage">4. Rechtsgrundlage</a></li>
-            <li><a href="#speicherdauer">5. Speicherdauer</a></li>
-            <li><a href="#firebase">6. Verwendung von Firebase (Google)</a></li>
-            <li><a href="#cookies">7. Cookies und LocalStorage</a></li>
-            <li><a href="#rechte">8. Ihre Rechte</a></li>
-            <li><a href="#sicherheit">9. Datensicherheit</a></li>
-            <li><a href="#aenderungen">10. Änderungen dieser Datenschutzerklärung</a></li>
+            <li><a href="#verantwortlicher">1. 👤 Verantwortlicher</a></li>
+            <li><a href="#datenverarbeitung">2. 📊 Art und Umfang der Datenverarbeitung</a></li>
+            <li><a href="#zwecke">3. 🎯 Zwecke der Datenverarbeitung</a></li>
+            <li><a href="#rechtsgrundlage">4. ⚖️ Rechtsgrundlage</a></li>
+            <li><a href="#speicherdauer">5. ⏱️ Speicherdauer und Datenlöschung</a></li>
+            <li><a href="#firebase">6. ☁️ Verwendung von Firebase (Google)</a></li>
+            <li><a href="#cookies">7. 🍪 Cookies und LocalStorage</a></li>
+            <li><a href="#age-verification-detail">8. 🔞 Jugendschutz und Altersverifikation</a></li>
+            <li><a href="#your-rights">9. ✋ Ihre Rechte nach DSGVO</a></li>
+            <li><a href="#sicherheit">10. 🔒 Datensicherheit</a></li>
+            <li><a href="#aenderungen">11. 📝 Änderungen dieser Datenschutzerklärung</a></li>
         </ul>
     </nav>
 
@@ -368,250 +375,22 @@
             </p>
         </section>
 
-        <!-- 8. Rechte -->
-        <section id="rechte">
-            <h2>8. Ihre Rechte nach DSGVO</h2>
-            <p>
-                Sie haben folgende Rechte bezüglich Ihrer personenbezogenen Daten:
-            </p>
-
-            <h3>8.1 Auskunftsrecht (Art. 15 DSGVO)</h3>
-            <p>
-                Sie können jederzeit Auskunft über die von uns gespeicherten Daten erhalten. Nutzen Sie dafür die Export-Funktion in den Einstellungen.
-            </p>
-
-            <h3>8.2 Recht auf Berichtigung (Art. 16 DSGVO)</h3>
-            <p>
-                Sie können fehlerhafte Daten (z.B. Ihren Spielernamen) jederzeit korrigieren.
-            </p>
-
-            <h3>8.3 Recht auf Löschung (Art. 17 DSGVO)</h3>
-            <p>
-                Sie können Ihre Daten jederzeit löschen:
-            </p>
-            <ul>
-                <li>Über die "Alle Daten löschen"-Funktion in den Einstellungen</li>
-                <li>Durch Widerruf Ihrer Einwilligung</li>
-                <li>Per E-Mail an: <a href="mailto:Nickjacklin99@web.de">Nickjacklin99@web.de</a></li>
-            </ul>
-
-            <h3>8.4 Recht auf Datenübertragbarkeit (Art. 20 DSGVO)</h3>
-            <p>
-                Sie können Ihre Daten im JSON-Format exportieren und zu einem anderen Dienst übertragen.
-            </p>
-
-            <h3>8.5 Widerspruchsrecht (Art. 21 DSGVO)</h3>
-            <p>
-                Sie können der Verarbeitung Ihrer Daten jederzeit widersprechen. Widerrufen Sie dafür Ihre Einwilligung in den Einstellungen.
-            </p>
-
-            <h3>8.6 Beschwerderecht (Art. 77 DSGVO)</h3>
-            <p>
-                Sie haben das Recht, sich bei einer Datenschutz-Aufsichtsbehörde zu beschweren:
-            </p>
-            <div class="contact-info">
-                <p>
-                    <strong>Bundesbeauftragter für den Datenschutz und die Informationsfreiheit (BfDI)</strong><br>
-                    Graurheindorfer Str. 153<br>
-                    53117 Bonn<br>
-                    Telefon: 0228 / 99 77 99 - 0<br>
-                    E-Mail: <a href="mailto:poststelle@bfdi.bund.de">poststelle@bfdi.bund.de</a>
-                </p>
-            </div>
-<!-- NEUE SECTIONS FÜR PRIVACY.HTML -->
-<!-- Einf
-
-ügen VOR Section 9 (Sicherheit) -->
-
-        <!-- 7. Cookie-Tabelle -->
-        <section id="cookies-detail">
-            <h2>7. Cookies und lokale Speicherung im Detail</h2>
-
-            <h3>7.1 Was sind Cookies?</h3>
-            <p>
-                Cookies sind kleine Textdateien, die auf Ihrem Gerät gespeichert werden.
-                Wir verwenden ausschließlich technisch notwendige Cookies und solche, die Sie über
-                unser Cookie-Banner explizit akzeptiert haben.
-            </p>
-
-            <h3>7.2 Verwendete Cookies und LocalStorage-Keys</h3>
-            <table class="cookie-table">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Typ</th>
-                        <th>Zweck</th>
-                        <th>Speicherdauer</th>
-                        <th>Kategorie</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Notwendige Cookies -->
-                    <tr>
-                        <td><code>nocap_cookie_consent</code></td>
-                        <td>LocalStorage</td>
-                        <td>Speichert Ihre Cookie-Einstellungen</td>
-                        <td>365 Tage</td>
-                        <td>Notwendig</td>
-                    </tr>
-                    <tr>
-                        <td><code>nocap_privacy_consent</code></td>
-                        <td>LocalStorage</td>
-                        <td>Datenschutz-Zustimmung</td>
-                        <td>Permanent</td>
-                        <td>Notwendig</td>
-                    </tr>
-                    <tr>
-                        <td><code>nocap_age_verification</code></td>
-                        <td>LocalStorage</td>
-                        <td>Altersverifikation für Jugendschutz</td>
-                        <td>30 Tage</td>
-                        <td>Notwendig</td>
-                    </tr>
-                    <tr>
-                        <td><code>nocap_game_state</code></td>
-                        <td>LocalStorage</td>
-                        <td>Spielstand-Zwischenspeicherung</td>
-                        <td>Session</td>
-                        <td>Notwendig</td>
-                    </tr>
-
-                    <!-- Funktionale Cookies -->
-                    <tr>
-                        <td><code>nocap_cached_questions</code></td>
-                        <td>LocalStorage</td>
-                        <td>Zwischenspeicherung von Fragen (Performance)</td>
-                        <td>24 Stunden</td>
-                        <td>Funktional</td>
-                    </tr>
-                    <tr>
-                        <td><code>firebase:authUser</code></td>
-                        <td>LocalStorage</td>
-                        <td>Firebase Authentication Status</td>
-                        <td>Bis Abmeldung</td>
-                        <td>Funktional</td>
-                    </tr>
-
-                    <!-- Analytics Cookies (nur mit Consent) -->
-                    <tr>
-                        <td><code>_ga</code></td>
-                        <td>Cookie</td>
-                        <td>Google Analytics - Nutzer-Identifikation</td>
-                        <td>2 Jahre</td>
-                        <td>Analyse</td>
-                    </tr>
-                    <tr>
-                        <td><code>_ga_*</code></td>
-                        <td>Cookie</td>
-                        <td>Google Analytics - Session-Daten</td>
-                        <td>2 Jahre</td>
-                        <td>Analyse</td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <h3>7.3 Cookie-Einstellungen ändern</h3>
-            <p>
-                Sie können Ihre Cookie-Einstellungen jederzeit ändern:
-            </p>
-            <button onclick="if(window.NocapCookies){window.NocapCookies.revokeConsent(); window.NocapCookies.reinitialize();}"
-                    class="btn btn-secondary">
-                Cookie-Einstellungen zurücksetzen
-            </button>
-        </section>
-
-        <!-- 8. Jugendschutz und Altersverifikation -->
-        <section id="age-verification-detail">
-            <h2>8. Jugendschutz und Altersverifikation</h2>
-
-            <h3>8.1 Warum Altersverifikation?</h3>
-            <p>
-                Gemäß Jugendschutzgesetz (JuSchG) und Jugendmedienschutz-Staatsvertrag (JMStV) müssen wir
-                sicherstellen, dass Inhalte mit FSK16/FSK18-Einstufung nur für entsprechende Altersgruppen
-                zugänglich sind.
-            </p>
-
-            <h3>8.2 Welche Daten werden bei der Altersverifikation gespeichert?</h3>
-            <p>
-                Bei der Altersverifikation speichern wir folgende Daten:
-            </p>
-            <ul>
-                <li><strong>Eingegebenes Geburtsdatum:</strong> Zur Berechnung des Alters</li>
-                <li><strong>Zeitstempel:</strong> Wann die Verifikation stattfand</li>
-                <li><strong>IP-Adresse (anonymisiert):</strong>
-                    Zur Missbrauchsprävention und Erfüllung der Nachweispflicht gemäß JMStV §5</li>
-                <li><strong>Verifikations-Status:</strong> Ob Verifikation erfolgreich war (FSK0/16/18)</li>
-            </ul>
-
-            <h3>8.3 IP-Adress-Speicherung im Detail</h3>
-            <div class="info-box">
-                <p>
-                    <strong>Zweck:</strong> Nachweis der Altersverifikation gemäß Jugendmedienschutz-Staatsvertrag (JMStV)<br>
-                    <strong>Rechtsgrundlage:</strong> Art. 6 Abs. 1 lit. c DSGVO (rechtliche Verpflichtung)<br>
-                    <strong>Speicherung:</strong> IP-Adresse wird gekürzt (letztes Oktett entfernt, z.B. 192.168.1.xxx)<br>
-                    <strong>Speicherdauer:</strong> 30 Tage ab Verifikation<br>
-                    <strong>Automatische Löschung:</strong> Nach Ablauf der 30 Tage werden die Daten automatisch gelöscht
-                </p>
-            </div>
-
-            <h3>8.4 Wie funktioniert die Anonymisierung?</h3>
-            <p>
-                Ihre IP-Adresse wird vor der Speicherung anonymisiert:
-            </p>
-            <pre><code>Original:      192.168.1.42
-Anonymisiert:  192.168.1.0
-→ Kein Personenbezug mehr möglich</code></pre>
-
-            <h3>8.5 Löschfristen</h3>
-            <table class="data-table">
-                <thead>
-                    <tr>
-                        <th>Datenart</th>
-                        <th>Löschfrist</th>
-                        <th>Grund</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Anonymisierte IP-Adresse</td>
-                        <td>30 Tage</td>
-                        <td>Nachweis Jugendschutz (JMStV)</td>
-                    </tr>
-                    <tr>
-                        <td>Geburtsdatum</td>
-                        <td>30 Tage</td>
-                        <td>Nachweis Altersverifikation</td>
-                    </tr>
-                    <tr>
-                        <td>Verifikations-Timestamp</td>
-                        <td>30 Tage</td>
-                        <td>Audit-Trail</td>
-                    </tr>
-                    <tr>
-                        <td>LocalStorage-Eintrag</td>
-                        <td>30 Tage oder bei Browserdaten-Löschung</td>
-                        <td>Client-seitige Speicherung</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-
-        <!-- 8B. Ihre Rechte als betroffene Person -->
+        <!-- 9. Ihre Rechte als betroffene Person -->
         <section id="your-rights">
-            <h2>8B. Ihre Rechte als betroffene Person</h2>
+            <h2>9. Ihre Rechte nach DSGVO</h2>
 
-            <h3>8B.1 Auskunftsrecht (Art. 15 DSGVO)</h3>
+            <h3>9.1 Auskunftsrecht (Art. 15 DSGVO)</h3>
             <p>
                 Sie haben das Recht, Auskunft über die von uns gespeicherten personenbezogenen Daten zu erhalten.
             </p>
 
-            <h3>8B.2 Recht auf Berichtigung (Art. 16 DSGVO)</h3>
+            <h3>9.2 Recht auf Berichtigung (Art. 16 DSGVO)</h3>
             <p>
                 Sie haben das Recht, die Berichtigung unrichtiger oder die Vervollständigung unvollständiger
                 personenbezogenen Daten zu verlangen.
             </p>
 
-            <h3>8B.3 Recht auf Löschung - "Recht auf Vergessenwerden" (Art. 17 DSGVO)</h3>
+            <h3>9.3 Recht auf Löschung - "Recht auf Vergessenwerden" (Art. 17 DSGVO)</h3>
             <p>
                 Sie haben das Recht, die Löschung Ihrer personenbezogenen Daten zu verlangen.
             </p>
@@ -677,7 +456,7 @@ Anonymisiert:  192.168.1.0
                 </ul>
             </div>
 
-            <h3>8B.4 Bearbeitungszeit</h3>
+            <h3>9.4 Bearbeitungszeit</h3>
             <table class="data-table">
                 <thead>
                     <tr>
@@ -705,7 +484,7 @@ Anonymisiert:  192.168.1.0
                 </tbody>
             </table>
 
-            <h3>8B.5 Weitere Rechte</h3>
+            <h3>9.5 Weitere Rechte</h3>
             <ul>
                 <li><strong>Recht auf Einschränkung der Verarbeitung (Art. 18 DSGVO):</strong>
                     Sie können die Einschränkung der Verarbeitung Ihrer Daten verlangen.</li>
@@ -713,21 +492,31 @@ Anonymisiert:  192.168.1.0
                     Sie können Ihre Daten in einem strukturierten Format erhalten.</li>
                 <li><strong>Widerspruchsrecht (Art. 21 DSGVO):</strong>
                     Sie können der Verarbeitung Ihrer Daten widersprechen.</li>
+                <li><strong>Beschwerderecht (Art. 77 DSGVO):</strong>
+                    Sie haben das Recht, sich bei einer Datenschutz-Aufsichtsbehörde zu beschweren.</li>
             </ul>
+
+            <div class="contact-info">
+                <h4>Zuständige Aufsichtsbehörde:</h4>
+                <p>
+                    <strong>Bundesbeauftragter für den Datenschutz und die Informationsfreiheit (BfDI)</strong><br>
+                    Graurheindorfer Str. 153<br>
+                    53117 Bonn<br>
+                    Telefon: 0228 / 99 77 99 - 0<br>
+                    E-Mail: <a href="mailto:poststelle@bfdi.bund.de">poststelle@bfdi.bund.de</a><br>
+                    Website: <a href="https://www.bfdi.bund.de" target="_blank" rel="noopener noreferrer">www.bfdi.bund.de</a>
+                </p>
+            </div>
         </section>
 
-
-
-        </section>
-
-        <!-- 9. Sicherheit -->
+        <!-- 10. Sicherheit -->
         <section id="sicherheit">
-            <h2>9. Datensicherheit</h2>
+            <h2>10. Datensicherheit</h2>
             <p>
                 Wir setzen technische und organisatorische Sicherheitsmaßnahmen ein, um Ihre Daten zu schützen:
             </p>
 
-            <h3>9.1 Technische Maßnahmen</h3>
+            <h3>10.1 Technische Maßnahmen</h3>
             <ul>
                 <li>🔒 <strong>TLS/SSL-Verschlüsselung:</strong> Alle Daten werden verschlüsselt übertragen</li>
                 <li>🔒 <strong>Datenverschlüsselung:</strong> Daten werden verschlüsselt in der Datenbank gespeichert</li>
@@ -736,7 +525,7 @@ Anonymisiert:  192.168.1.0
                 <li>🔒 <strong>CSP-Header:</strong> Content Security Policy verhindert Schadcode-Einschleusung</li>
             </ul>
 
-            <h3>9.2 Organisatorische Maßnahmen</h3>
+            <h3>10.2 Organisatorische Maßnahmen</h3>
             <ul>
                 <li>✅ Regelmäßige Sicherheits-Updates</li>
                 <li>✅ Automatische Datenlöschung nach 24 Stunden</li>
@@ -745,15 +534,27 @@ Anonymisiert:  192.168.1.0
             </ul>
         </section>
 
-        <!-- 10. Änderungen -->
+        <!-- 11. Änderungen -->
         <section id="aenderungen">
-            <h2>10. Änderungen dieser Datenschutzerklärung</h2>
+            <h2>11. Änderungen dieser Datenschutzerklärung</h2>
             <p>
                 Wir behalten uns vor, diese Datenschutzerklärung anzupassen, um sie an geänderte Rechtslagen oder bei Änderungen unserer Dienste anzupassen.
             </p>
             <p>
-                <strong>Aktuelle Version:</strong> 2.1 (Stand: 8. Januar 2026)
+                <strong>Aktuelle Version:</strong> 2.2 (Stand: 11. Januar 2026)
             </p>
+            <p>
+                <strong>Änderungen in Version 2.2:</strong>
+            </p>
+            <ul>
+                <li>✅ Inline-JavaScript vollständig entfernt (Sicherheit)</li>
+                <li>✅ Struktur optimiert: Logische Kapitel 1-11 mit eindeutigen Ankern</li>
+                <li>✅ Neue Sektion 8: Jugendschutz und Altersverifikation detailliert</li>
+                <li>✅ Cookie-Tabelle erweitert und übersichtlicher gestaltet</li>
+                <li>✅ Speicherfristen präzisiert (24h für Spieldaten, 30 Tage für Altersverifikation)</li>
+                <li>✅ Quick-Links zu Impressum und Jugendschutz im Header</li>
+                <li>✅ Redundanzen entfernt, bessere Lesbarkeit durch Icons und Listen</li>
+            </ul>
             <p>
                 <strong>Änderungen in Version 2.1:</strong>
             </p>
@@ -795,9 +596,12 @@ Anonymisiert:  192.168.1.0
     </main>
 
     <footer class="privacy-footer">
-        <a href="index.html" class="back-button">
-            ← Zurück zur Startseite
-        </a>
+        <div class="footer-navigation">
+            <a href="/" class="footer-nav-link" tabindex="0">← Startseite</a>
+            <a href="/imprint.html" class="footer-nav-link" tabindex="0">📋 Impressum</a>
+            <a href="/privacy-new-sections.html#jugendschutz" class="footer-nav-link" tabindex="0">🔞 Jugendschutz</a>
+        </div>
+        <p class="footer-copyright">© 2026 Nick-Mark Jacklin | No-Cap Party Game</p>
     </footer>
 </div>
 
